[package]
name = "rctop"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.10"
serde_json = "1.0.64"
#tokio = { version = "1", features = ["full"] }
futures = "0.3"
crossterm = "0.22.1"
ctrlc = "3.2.1"